Make sure labels get truncated and do not overlap other labels.

--- a/plugins/TreemapVisualization/stylesheets/treemap.less
+++ b/plugins/TreemapVisualization/stylesheets/treemap.less
@@ -1,11 +1,18 @@
 .infoviz-treemap-node-label {
-    margin: 3px 0 0 6px;
-    display: inline-block;
+    margin: 3px 6px 0 6px;
+    display: block;
+    white-space:nowrap;
+    text-overflow:ellipsis;
+    overflow:hidden;
 }
 
 .infoviz-treemap {
     width:450px;
     height:320px;
+
+    .node {
+        overflow:hidden;
+    }
 }
 
 .widget .infoviz-treemap {
